--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container container-fluid">
-      <a class="navbar-brand" href="/index.html">Movielst</a>
+      <a class="navbar-brand" href="index.html">Movielst</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <form class="d-flex" action="/pesquisa.html">
+        <form class="d-flex" action="/movieslt/pesquisa.html">
           <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" name="searchText">
           <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
