--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <form class="d-flex" action="/movieslt/pesquisa.html">
+        <form class="d-flex" action="pesquisa.html">
           <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" name="searchText">
           <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
